--- a/IOT/packages.config
+++ b/IOT/packages.config
@@ -7,10 +7,29 @@
   <package id="InfluxDB.Client" version="4.14.0" targetFramework="net462" />
   <package id="InfluxDB.Client.Core" version="4.14.0" targetFramework="net462" />
   <package id="JsonSubTypes" version="2.0.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging" version="2.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Options" version="2.0.0" targetFramework="net462" />
+  <package id="NRediSearch" version="2.2.79" targetFramework="net462" />
+  <package id="NRedisStack" version="0.12.0" targetFramework="net462" />
+  <package id="NetTopologySuite" version="2.5.0" targetFramework="net462" />
+  <package id="RedLock.net" version="2.3.2" targetFramework="net462" />
+  <package id="ServiceStack.Common" version="8.2.2" targetFramework="net462" />
+  <package id="ServiceStack.Interfaces" version="8.2.2" targetFramework="net462" />
+  <package id="ServiceStack.Redis" version="8.2.2" targetFramework="net462" />
+  <package id="ServiceStack.Text" version="8.2.2" targetFramework="net462" />
+  <package id="System.Net.Security" version="4.3.2" targetFramework="net462" />
+  <package id="System.Collections.NonGeneric" version="4.3.0" targetFramework="net462" />
+  <package id="System.Data.Common" version="4.3.0" targetFramework="net462" />
+  <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net462" />
+  <package id="System.Net.NetworkInformation" version="4.3.0" targetFramework="net462" />
+  <package id="System.Net.Requests" version="4.3.0" targetFramework="net462" />
+  <package id="System.Reflection.TypeExtensions" version="4.7.0" targetFramework="net462" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net462" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="csredis" version="3.2.1" targetFramework="net462" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net462" />
   <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net462" />
-  <package id="Microsoft.CSharp" version="4.3.0" targetFramework="net462" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net462" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="8.0.0" targetFramework="net462" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="8.0.0" targetFramework="net462" />
   <package id="Microsoft.Extensions.ObjectPool" version="7.0.13" targetFramework="net462" />
@@ -38,7 +57,6 @@
   <package id="System.IO.Pipelines" version="5.0.1" targetFramework="net462" />
   <package id="System.Memory" version="4.5.5" targetFramework="net462" />
   <package id="System.Net.NameResolution" version="4.3.0" targetFramework="net462" />
-  <package id="System.Net.Security" version="4.3.1" targetFramework="net462" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net462" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net462" />
   <package id="System.Reactive" version="6.0.0" targetFramework="net462" />
